--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,348 @@
-.App {
-  text-align: center;
+
+
+
+.logo{
+    width: 110px;
+    height: 90px;
+    margin-left: 30px;
+}
+nav{
+    background-color: #f3b3b1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 5px 5px 10px grey;
+    overflow: hidden;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    padding-bottom: 5px;
+    padding-top: 5px; 
+}
+.navbar-menu{
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    margin-right: 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.navbar-menu a{
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+    position: relative;
+    letter-spacing: 1px;
+}
+.navbar-menu a:after{
+    content: '';
+    position: absolute;
+    background-color: white;
+    height: 2px;
+   width: 100%;
+    bottom: 13px;
+   border-radius: 10px;
+    transform: scaleX(0);
+    transition-duration: 1s;
+    transform-origin: left;
+}
+.navbar-menu a:hover:after{
+    transform: scaleX(1);  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.appointment-btn{
+    background-color: white;
+    color: #f3b3b1;
+    padding-left: 12px;
+    padding-right: 12px;
+    height: 35px;
+    font-weight: bold;
+    border-radius: 30px;
+    border-width: 0;
+    margin-top: 10px;
+    cursor: pointer;
+    transition-duration: 1.3s;
+    letter-spacing: 1px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.intro{
+display: flex;
+margin-top: 80px;
+flex-wrap: wrap
+}
+.img1{ 
+width: 65%;
+height: 100%
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.intro-card{
+width: 35%;
+height: 100%;
+box-sizing: border-box;
+padding-top: 10px;
+text-align: center;
+display: flex;
+flex-direction: column;
+background-color: rgb(250, 223, 223);
+transition-duration: 1.2s;
+}
+.title{
+margin-bottom: 0px;
+/* margin-top: 15px; */
+color: rgb(37, 37, 36);
+font-family: 'Eczar';
+letter-spacing: 8px;
+font-weight: 500;
+
+
+}
+.circle-card{
+    width: 250px;
+    height: 250px;
+    width: 100%;
+    height: 68%;
+    color: white;
+    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f3b3b1;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 0;
+}
+.circle-card img{
+    width: 100%;
+    height: 91%;
+    margin-bottom: 0; 
+    transition-duration: 1s;
 }
 
-.App-link {
-  color: #61dafb;
+.circle-card img:hover{
+    transform: scale(1.1);
+    border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.circle-card p{
+    font-size: 18px;
+    margin-bottom: 10px;
+    margin-top: 0px;
+}
+.certified-card h1{
+    background-color:white;
+    border-radius: 10px;
+    font-family: 'Droid+Sans';
+    width: 90%;
+    color: #f3b3b1;
+    font-size: 20px;
+    margin: auto;
+    padding: 8px;
+    margin-top: 10px;
+    letter-spacing: 2px;
+}
+
+.service{
+    background-color:#f3b3b1;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 25px;
+}
+.service-title{
+    letter-spacing: 1px;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.apt-btn{
+    display: none;
+}
+.appointment-btn:hover{
+background-color: #f3b3b1;
+color: white;
+box-shadow: 0 0 1px grey,0 0 1px grey,0 0 1px grey;
+}
+
+.service-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+
+}
+.service-card{
+    height: 250px;
+    width: 330px;
+    display: flex;
+    background-color: white;
+    border-radius: 15px;
+    flex-grow: 1;
+}
+
+.service-card div{
+    width: 45%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #fefaf9;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+.service-card img{
+    width: 55%;
+    height: 100%;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.service-card div h1{
+    font-size: 20px;
+}
+
+.service-card div button{
+    background-color: #f3b3b1;
+    color: white;
+    font-size: 9.7px;
+    width: 70%;
+    transition-duration: 1s;
+}
+
+.service-card div button:hover{
+    transform: scale(1.2);
+    
+}
+
+.service-card div p span{
+    font-weight: bold;
+}
+.discount{
+    font-size: 8px;
+}
+.benefits{
+    background-color: #f9d9d8;
+    border-style: solid;
+    border-width: 0;
+    border-top-width: 3px;
+    border-color: white;
+    padding: 15px;
+}
+.benefits-title{
+    text-align: center;
+    color: #7a5a59;
+    letter-spacing: 1px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.benefits-card{
+    width: 100%;
+    display: flex;
+    height: 80%;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-items: center;
+    margin-top: 10px;
+}
+.benefits-left-card{
+    width: 50%;
+    height: 100%;
+    background-color: #f5c2c1;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 10px;
+    gap: 5px;
+    
+}
+.benefits-image{
+    width: 40%;
+    height: 100%;
+    flex-grow: 1;
+    border-radius: 10px;
+    box-shadow: 0 0 3px rgb(109, 107, 107), 0 0 3px rgb(109, 107, 107), 0 0 3px rgb(109, 107, 107);
+}
+
+.benefits-left-card p{
+    font-size: 18px;
+    display: flex;
+    font-family: 'Poppins';
+    background-color: white;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 18px;
+    border-top-left-radius: 18px;
+    margin-left: 0;
+    align-items: center;
+    gap: 15px;
+   
+}
+.benefits-left-card span{
+   width: 35px;
+   height: 35px;
+   border-radius: 120px;
+   background-color: #7a5a59;
+   display: flex;
+   color: white;
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+   justify-content: center;
+   align-items: center;
+
+}
+@media screen and (min-width:1025px) {
+
+    .intro{
+        height: 88vh;
+    }
+    .benefits{
+        height: 80vh;
+    }
+   
+ 
+}
+@media screen and (max-width:1024px) {
+    .intro-card,.img1{
+        width: 100%;
+
+    }
+    .intro{
+        min-height: 70vh;
+    }
+    .benefits{
+        min-height: 70vh;
+    }
+    .benefits-left-card, .benefits-image{
+        width: 100%;
+    }
+    .intro-card{
+        padding-bottom: 8px;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .intro-card,.img1{
+        width: 100%;
+        flex-grow: 1;
+    }
+    .img1{
+        height: 45vh;
+    }
+    .navbar-menu{
+        display: none;
+    }
+    .apt-btn{
+        display: block;
+        margin-right: 10px;
+    }
+    .certified-card h1{
+        margin-bottom: 10px;
+    }
+    .title{
+        margin-top: 0px;
+    }
+    .intro-card{
+        padding-bottom: 0px;
+    }
 }
