--- a/src/App.css
+++ b/src/App.css
@@ -300,8 +300,9 @@ box-shadow: 0 0 1px grey,0 0 1px grey,0 0 1px grey;
         height: 80vh;
     }
    .service-card{
-    width: 350px;
-       flex-grow: 0;
+    width: 410px;
+       height:270px ;
+       flex-grow: 1;
    }
     .service-list{
         justify-content: center;
