--- a/src/App.css
+++ b/src/App.css
@@ -307,6 +307,10 @@ box-shadow: 0 0 1px grey,0 0 1px grey,0 0 1px grey;
     .service-list{
         justify-content: center;
     }
+    .benefits-left-card{
+    justify-content: center;
+    align-items: center;
+    }
  
 }
 @media screen and (max-width:1199px) {
