--- a/src/App.css
+++ b/src/App.css
@@ -294,49 +294,49 @@ box-shadow: 0 0 1px grey,0 0 1px grey,0 0 1px grey;
 
 }
 .contact{
-    height: 35vh;
+   height: 40vh;
     background-color: #7a5a59;
     border-style: solid;
     border-width: 0;
     border-top-width: 4px;
     border-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
     
 }
 .contact-first-card{
     height: 70%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 100px;
 }
 .about {
-    width: 50%;
+    
     margin-left: 20px;
     font-family: 'Inconsolata';
     color: #2e2828;
     /* text-align: center; */
     margin-top: 12px;
-    flex-grow: 1;
+    width: 40%;
 
 }
 .contact-info{
     /* text-align: center; */
-    width: 20%;
+    width: 40%;
     color: #2e2828;
-    flex-grow: 1;
+    
 }
-.address{
-    width: 20%;
-    color: #2e2828;
-    /* text-align: center; */
-    flex-grow: 1;
-}
+
 .contact-second-card{
     height: 25%;
     background-color: #52403f;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px
+  margin-top: 20px;
    
 }
 @media screen and (min-width:1200px) {
@@ -368,6 +368,12 @@ box-shadow: 0 0 1px grey,0 0 1px grey,0 0 1px grey;
     }
 }
 @media screen and (max-width:1199px) {
+    .contact{
+        min-height: 35vh;
+        }
+        .contact-first-card{
+            gap: 10px;
+        }
     .intro-card,.img1{
         width: 100%;
 
@@ -387,6 +393,10 @@ box-shadow: 0 0 1px grey,0 0 1px grey,0 0 1px grey;
 }
 
 @media screen and (max-width:600px) {
+    .contact-first-card{
+        gap: 30px;
+    }
+   
     .intro-card,.img1{
         width: 100%;
         flex-grow: 1;
